test_cases/pass/p35.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x, y
x=10
y=20
PRINT: x & $ & y
END SCRIPT
