test_cases/fail/f24.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
PRINT: x & unknown
END SCRIPT
